# e-wardrobe

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
ewardrobe/: entrypoint.sh  manage.py  requirements.txt
ewardrobe/creating_data/: constants.py  create_data.py
ewardrobe/data/: ae_com.csv  amazon_com.csv  generated_data.csv  hankypanky_com.csv
ewardrobe/data/additional_data/: shop_nordstrom_com.csv  victoriassecret_com.csv
ewardrobe/ewardrobe/: load_secrets.py  secrets.ci.json  settings.py  urls.py  wsgi.py
ewardrobe/ewardrobe_app/: admin.py  apps.py  models.py
ewardrobe/ewardrobe_app/forms/: login.py  register.py
ewardrobe/ewardrobe_app/migrations/: 0001_initial.py  0002_auto_20191223_2150.py  0003_remove_product_size.py  0004_auto_20200102_2153.py  0005_auto_20200102_2210.py  0006_auto_20200102_2211.py  0007_auto_20200102_2212.py  0008_auto_20200102_2233.py  0009_auto_20200103_0916.py  0010_auto_20200106_1950.py  0011_auto_20200121_1424.py  0012_remove_basket_cost.py  0013_auto_20200121_1643.py  0014_auto_20200122_1336.py  0015_auto_20200203_2125.py  0016_productsamount_date_created.py  0017_auto_20200218_2123.py  0018_auto_20200218_2127.py  0019_auto_20200225_1835.py  0020_remove_basket_paid.py  0021_auto_20200227_2057.py  0022_auto_20200303_1452.py
ewardrobe/ewardrobe_app/queries/: basket.py  order.py  orders.py  products.py
ewardrobe/ewardrobe_app/templates/: base.html  basket.html  baskets.html  login.html  main.html  (+6 more)
ewardrobe/processing_data/: constants.py  merge_data_sources.py  prepare_data.py  tests.py
ewardrobe/scripts/: generate_data.py  load_data.py
processing_data/: constants.py  prepare_data.py
(+29 files in other folders)
