[tool.poetry]
name = "ewardrobe"
version = "0.1.0"
description = ""
authors = ["Ewelina Szmielew <ewelina@szmielew.pl>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = ">=1.4.3"
appnope = ">=0.1.0"
asgiref = ">=3.2.3"
attrs = ">=19.3.0"
backcall = ">=0.1.0"
black = ">=19.10b0"
certifi = ">=2019.11.28"
chardet = ">=3.0.4"
Click = ">=7.0"
decorator = ">=4.4.1"
Django = ">=3.0.3"
django-admin-honeypot = ">=1.1.0"
django-extensions = ">=2.2.5"
django-fsm = ">=2.7.0"
docutils = ">=0.16"
entrypoints = ">=0.3"
factory-boy = ">=2.12.0"
Faker = ">=4.0.0"
flake8 = ">=3.7.9"
graphviz = ">=0.13.2"
idna = ">=2.9"
importlib-metadata = ">=1.3.0"
ipdb = ">=0.12.3"
ipython = ">=7.11.1"
ipython-genutils = ">=0.2.0"
jedi = ">=0.15.2"
mccabe = ">=0.6.1"
more-itertools = ">=8.0.2"
numpy = ">=1.18.0"
packaging = ">=19.2"
pandas = ">=0.25.3"
parso = ">=0.5.2"
pathspec = ">=0.7.0"
pexpect = ">=4.7.0"
pickleshare = ">=0.7.5"
pluggy = ">=0.13.1"
prompt-toolkit = ">=3.0.2"
ptyprocess = ">=0.6.0"
py = ">=1.8.1"
pycodestyle = ">=2.5.0"
pyflakes = ">=2.1.1"
Pygments = ">=2.5.2"
pyparsing = ">=2.4.6"
pytest = ">=5.3.2"
python-dateutil = ">=2.8.1"
pytz = ">=2019.3"
regex = ">=2019.12.20"
requests = ">=2.23.0"
six = ">=1.13.0"
sqlparse = ">=0.3.0"
stripe = ">=2.42.0"
text-unidecode = ">=1.3"
toml = ">=0.10.0"
tqdm = ">=4.42.0"
traitlets = ">=4.3.3"
typed-ast = ">=1.4.0"
urllib3 = ">=1.25.8"
wcwidth = ">=0.1.8"
zipp = ">=0.6.0"
psycopg2 = "^2.8.4"
django_extensions = "2.2.5"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
